# SMSE

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-workflow.yml  ci-build.yml  ci-lint.yml  ci-test.yml  lint-workflow.yml  lint.yaml  release-workflow.yml  test-workflow.yml
pipelines/: audio_pipeline.py  base_pipeline.py  factory.py  image_pipeline.py  text_pipeline.py  video_pipeline.py
smse/: __init__.py  cli.py  device.py  logger.py  logging.py  types.py
smse/benchmarks/: benchmark.py  evaluator.py  evvaluator.py  metric.py  text_evaluator.py
smse/models/: __init__.py  base.py  imagebind.py  imagebind_models.py  sentence_transformers.py  st_models.py
smse/pipelines/: __init__.py  audio.py  audio_pipeline.py  base.py  factory.py  image.py  image_pipeline.py  multimodal.py  text.py  text_pipeline.py  video.py  video_pipeline.py
smse/recipes/benchmark/: text_embedding.py  text_evaluation.py
smse/recipes/metrics/: map.py  mrr.py  ndcg.py  pearson.py  precision.py  recall.py  spearman.py  topk.py
smse/recipes/models/: clip_embedding.py  imagebind_embedding.py
smse/recipes/pipelines/: image.py
smse/recipies/models/: st_models.py  text_embedding.py
smse/utils/: __init__.py  transformations.py
