[tool.poetry]
name = "smse"
version = "0.1.0"
description = "A search engine that works across multiple modalities using semantic embeddings"
authors = ["Ahmedsaed <ahmedsaed2652003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "7.0.0"
pyproject-flake8 = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "third-party"
line-length = 88

[tool.isort]
extend_skip = "third-party"
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "setup.py,src,tests"
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
enable_error_code = "possibly-undefined,redundant-expr,truthy-bool,truthy-iterable"
warn_unused_configs = false
