[tool.poetry]
name = "smse"
version = "0.1.0"
description = "A search engine that works across multiple modalities using semantic embeddings"
authors = ["Ahmedsaed <ahmedsaed2652003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
smse = "smse.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
types-pillow = "^10.2.0.20240822"
torch = "^2.5.1"
langchain = "^0.3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "7.0.0"
pytest = "^8.3.3"

[tool.poetry.group.audio]
optional = true

[tool.poetry.group.vision]
optional = true

[tool.poetry.group.audio.dependencies]
torchaudio = "^2.5.1"
torch = "^2.5.1"

[tool.poetry.group.vision.dependencies]
torchvision = "^0.20.1"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "third-party"
line-length = 88

[tool.isort]
extend_skip = "third-party"
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "smse,tests,utils"
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
enable_error_code = "possibly-undefined,redundant-expr,truthy-bool,truthy-iterable"
warn_unused_configs = false
warn_unused_ignores = false
